# sim-im

./: ALL_BUILD.vcproj  AUTHORS.sim  CMakeLists.txt  ChangeLog  ChangeLog.old  ConfigureChecks.cmake  Doxyfile  README  README.SVN  TODO.CMake  TODO.MingW  altlinux.spec  asp-linux.spec  config.h.cmake  configure.in.in  export_nix.py  fedora.spec  jisp-resources.txt  mandrake.spec  porting-issues.html  resource.h  sim.pro  sim.sln  sim.vcproj  simall.vcproj  suse.spec
plugins/_core/: CMakeLists.txt  _core.vcproj  arcfg.cpp  arcfg.h  arcfgbase.ui  autoreply.cpp  autoreply.h  autoreplybase.ui  cfgdlg.cpp  cfgdlg.h  cfgdlgbase.ui  cmenu.cpp  cmenu.h  commands.cpp  commands.h  commonstatus.cpp  commonstatus.h  connectionsettings.cpp  connectionsettings.h  connectionsettingsbase.ui  connectwnd.cpp  connectwnd.h  connectwndbase.ui  container.cpp  container.h  containermanager.cpp  containermanager.h  core.cpp  core.h  core.rc  core_api.h  core_consts.h  core_events.h  core_pch.h  declinedlg.cpp  declinedlg.h  declinedlgbase.ui  editmail.cpp  editmail.h  editmailbase.ui  (+116 more)
plugins/autoaway/: CMakeLists.txt  autoaway.cpp  autoaway.h  autoaway.rc  autoaway.vcproj  autoawaycfg.cpp  autoawaycfg.h  autoawaycfgbase.ui  configure.in.in  idleui.cpp  idleui.def  idleui.h  idleui.rc  idleui.vcproj
plugins/icq/: CMakeLists.txt  aboutinfo.cpp  aboutinfo.h  aboutinfobase.ui  advsearch.cpp  advsearch.h  advsearchbase.ui  aimconfig.cpp  aimconfig.h  aimconfigbase.ui  aiminfo.cpp  aiminfo.h  aiminfobase.ui  aimsearch.cpp  aimsearch.h  aimsearchbase.ui  aimservices.cpp  authorizationsnachandler.cpp  authorizationsnachandler.h  buddysnachandler.cpp  buddysnachandler.h  bytearraybuilder.cpp  bytearraybuilder.h  bytearrayparser.cpp  bytearrayparser.h  clientcapabilitiesregistry.cpp  clientcapabilitiesregistry.h  clientcapability.cpp  clientcapability.h  configure.in.in  encodingdlg.cpp  encodingdlg.h  encodingdlgbase.ui  homeinfo.cpp  homeinfo.h  homeinfobase.ui  icbmsnachandler.cpp  icbmsnachandler.h  icq.cpp  icq.h  (+102 more)
plugins/jabber/: CMakeLists.txt  discoinfo.cpp  discoinfo.h  discoinfobase.ui  httppoll.cpp  infoproxy.cpp  infoproxy.h  infoproxybase.ui  jabber.cpp  jabber.h  jabber.rc  jabber.vcproj  jabber_api.h  jabber_auth.cpp  jabber_events.h  jabber_pch.h  jabber_rosters.cpp  jabber_ssl.cpp  jabber_ssl.h  jabberaboutinfo.cpp  jabberaboutinfo.h  jabberaboutinfobase.ui  jabberadd.cpp  jabberadd.h  jabberaddbase.ui  jabberbrowser.cpp  jabberbrowser.h  jabberbuffer.cpp  jabberbuffer.h  jabberclient.cpp  jabberclient.h  jabberconfig.cpp  jabberconfig.h  jabberconfigbase.ui  jabbercontact.cpp  jabbercontact.h  jabberfiletransfer.cpp  jabbergroup.cpp  jabbergroup.h  jabberhomeinfo.cpp  (+25 more)
plugins/remote/: CMakeLists.txt  IContextMenuImpl.h  IShellExtInitImpl.h  SIM_ext.cpp  SIM_ext.h  SIM_ext.rgs  SimControl.cpp  SimControl.h  SimControl.rgs  configure.in.in  remote.cpp  remote.h  remote.rc  remote.vcproj  remotecfg.cpp  remotecfg.h  remotecfgbase.ui  resource.h  sim_remote.cpp  simctrl.cpp  simctrl.desktop  simctrl.vcproj  simext.cpp  simext.def  simext.idl  simext.rc  simext.vcproj  simipc.cpp  simipc.vcproj  simremote.def  simremote.idl  simremote.rc  simremote.vcproj  x-icq.desktop
plugins/sound/: CMakeLists.txt  ogg.rules  sound.cpp  sound.h  sound.rc  sound.vcproj  soundconfig.cpp  soundconfig.h  soundconfigbase.ui  sounduser.cpp  sounduser.h  sounduserbase.ui
plugins/splash/: CMakeLists.txt  splash.cpp  splash.h  splash.vcproj
plugins/yahoo/: CMakeLists.txt  configure.in.in  crypt.cpp  yahoo.cpp  yahoo.h  yahoo.rc  yahoo.vcproj  yahoo_pch.h  yahooauth.cpp  yahoocfg.cpp  yahoocfg.h  yahoocfgbase.ui  yahooclient.cpp  yahooclient.h  yahoofiletransfer.cpp  yahoohttp.cpp  yahooinfo.cpp  yahooinfo.h  yahooinfobase.ui  yahoosearch.cpp  yahoosearch.h  yahoosearchbase.ui  yahootransformtables.c
sim/: CMakeLists.txt  aboutdata.cpp  aboutdata.h  buffer.cpp  buffer.h  builtinlogger.cpp  builtinlogger.h  cfg.cpp  cfg.h  cjk_variants.h  clientlist.cpp  clientlist.h  clientmanager.cpp  clientmanager.h  cmddef.cpp  cmddef.h  contacts.cpp  contacts.h  country.cpp  country.h  event.cpp  event.h  exec.cpp  exec.h  fetch.cpp  fetch.h  fetchclientprivate.h  html.h  html.ll  icons.cpp  icons.h  johab_hangul.h  kdeisversion.h  log.cpp  log.h  message.cpp  message.h  misc.cpp  misc.h  paths.cpp  (+30 more)
sim/commands/: commandhub.cpp  commandhub.h  commandset.cpp  commandset.h  uicommand.cpp  uicommand.h
sim/contacts/: client.cpp  client.h  clientdataiterator.cpp  clientdataiterator.h  clientdatastruct.h  clientuserdata.cpp  clientuserdata.h  clientuserdataprivate.cpp  clientuserdataprivate.h  contact.cpp  contact.h  contactlist.cpp  contactlist.h  group.cpp  group.h  imcontact.cpp  imcontact.h  imgroup.cpp  imgroup.h  imstatus.cpp  imstatus.h  imstatusinfo.cpp  imstatusinfo.h  packettype.cpp  packettype.h  protocol.cpp  protocol.h  protocolmanager.cpp  protocolmanager.h  standardcontactlist.cpp  standardcontactlist.h  userdata.cpp  userdata.h
sim/events/: contactevent.cpp  contactevent.h  eventdata.cpp  eventdata.h  eventhub.cpp  eventhub.h  ievent.cpp  ievent.h  logevent.cpp  logevent.h  nulleventdata.cpp  nulleventdata.h  standardevent.cpp  standardevent.h
sim/imagestorage/: iconset.cpp  iconset.h  imagestorage.cpp  imagestorage.h  jispiconset.cpp  jispiconset.h  standardimagestorage.cpp  standardimagestorage.h
sim/libltdl/: ltdl.c  ltdl.h
sim/messaging/: genericmessage.cpp  genericmessage.h  message.cpp  message.h  messagepipe.cpp  messagepipe.h  messageprocessor.cpp  messageprocessor.h  standardmessagepipe.cpp  standardmessagepipe.h
sim/network/: asyncsocket.cpp  asyncsocket.h  tcpasyncsocket.cpp  tcpasyncsocket.h
sim/other_icons/: sim.icns
sim/png/: CMakeLists.txt
sim/qzip/: ioapi.h  qzip.cpp  qzip.h  unzip.c  unzip.h
sim/simapp/: kdesimapp.cpp  kdesimapp.h  simapp.cpp  simapp.h
sim/simgui/: ballonmsg.cpp  ballonmsg.h  datepicker.cpp  datepicker.h  editfile.cpp  editfile.h  fontedit.cpp  fontedit.h  intedit.cpp  intedit.h  linklabel.cpp  linklabel.h  listview.cpp  listview.h  preview.cpp  preview.h  (+26 more)
(+636 files in other folders)
